hphp/test/zend/good/ext/simplexml/tests/012.php.skipif
<?hh 
	if (!extension_loaded('simplexml')) print 'skip';
