hphp/test/zend/bad/ext/intl/tests/symfony_format_type_int32_intl2.php.skipif
<?php if( !extension_loaded( 'intl' ) ) print 'skip'; ?>